--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1219,6 +1219,9 @@ ul.get-more-questions-menu {
             .plant-list {
                 height: auto !important;
                 width: 100%;
+                .wait {
+                    background-position: center 10%;
+                }
                 .plant {
                     float: left;
                     font-size: 10px;
